# countryside-resort-bot

./: chat_widget.html  main.py  pyproject.toml
data/raw/: 02_inroom_info_card.html  countryside_resort_info.txt
data/vectorstore/: chroma.sqlite3  index.faiss  index.pkl
notebooks/: 01-test-connection.ipynb  02-rag-system.ipynb  03-resort-agent.ipynb
