[project]
name = "countryside-resort-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.14.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "openai>=2.36.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
